# SequentialSkillRL

./: .gitignore  .gitmodules  README.md  analyze_ablations.py  install_minihack.sh  main.py  model.py  nld_tutorial.ipynb  pyproject.toml  run_ablations.py  train.py  trial.ipynb  ttyrecs.db
bin_count_analysis/combined/: complete_bin_counts.json  glyph_analysis_results.json
bin_count_analysis/test/: complete_bin_counts.json  glyph_analysis_results.json
bin_count_analysis/train/: complete_bin_counts.json  glyph_analysis_results.json
checkpoints_hmm/: hmm_round1.pt  hmm_round2.pt  hmm_round3.pt  hmm_round4.pt
hmm_analysis/round_01/: round01_diags.json
hmm_analysis/round_02/: round02_diags.json
hmm_analysis/round_03/: round03_diags.json
hmm_analysis/round_04/: round04_diags.json
rl/: ppo.py
runs/ablation_baseline_MiniHack_Room_Random_15x15_v0_20250916-220827/: metrics.jsonl
runs/ablation_baseline_MiniHack_Room_Random_15x15_v0_20250917-124817/: metrics.jsonl
runs/ablation_baseline_MiniHack_Room_Random_15x15_v0_20250917-132719/: metrics.jsonl
runs/ablation_baseline_MiniHack_Room_Random_15x15_v0_20250917-200246/: metrics.jsonl
runs/ablation_baseline_MiniHack_Room_Random_15x15_v0_20250919-122513/: metrics.jsonl
src/: data_collection.py  model.py  model_new.py  skill_space.py  test_sticky_hdp_hmm.py
training/: README_online_rl.md  online_rl.py  train.py  training_utils.py
utils/: action_utils.py  analysis.py  env_utils.py  math_utils.py
vae_analysis/: recon_comparison.md  test_recon_comparison.md  train_recon_comparison.md
wandb/: settings
