[project]
name = "bayesiansequentialrl"
version = "0.1.0"
description = "Use auto-encoder with Dirichlet Process Mixture Model with Hidden Markov Model to preserve sequential skills to explore in open-ended environment"
authors = [
    {name = "Xu Chen",email = "xchen.catkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8, <=3.9"
dependencies = [
    "minihack (>=1.0.2,<2.0.0)",
    "matplotlib (>=3.5,<3.10)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

