[project]
name = "bayesianrl"
version = "0.1.0"
description = "Use auto-encoder with Dirichlet Process Mixture Model with Hidden Markov Model to preserve sequential skills to explore in open-ended environment"
authors = [
    {name = "Xu Chen",email = "xchen.catkin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "gymnasium (==1.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "nle (>=1.2)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
minihack = {path = "../minihack"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
