[project]
name = "bayesianrl"
version = "0.1.0"
description = "Use auto-encoder with Dirichlet Process Mixture Model with Hidden Markov Model to preserve sequential skills to explore in open-ended environment"
authors = [
    {name = "Xu Chen",email = "xchen.catkin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "gymnasium (==1.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
minihack = {path = "minihack", develop = true}
cmake="^3.26"
cython="^0.29"
pybind11 = {version = "^2.10", optional = true}
nle = {path = "nle", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
